feat: error handeling and rate limiter
